# src/validation/users.js
@@ -22,3 +22,13 @@ export const resetPasswordSchema = Joi.object({
   password: Joi.string().required(),
   token: Joi.string().required(),
 });
+
+export const updateUserProfileSchema = Joi.object({
+  name: Joi.string().optional(),
+  email: Joi.string().email().optional(),
+  password: Joi.string().min(6).optional(),
+  avatar: Joi.string().uri().optional(),
+  weight: Joi.number().optional(),
+  activityLevel: Joi.number().integer().min(1).max(5).optional(),
+  gender: Joi.string().valid('male', 'female', 'other').optional(),
+});
